fix form title & scrollbar styling

--- a/src/components/form-element/form-element.css
+++ b/src/components/form-element/form-element.css
@@ -88,7 +88,8 @@
 }
 
 #btnSubmit {
-  margin: 4px 0;
+  width: 100%;
+  margin: 8px 0 4px;
 }
 
 .form-container .btnClose {
